prodMetadata/src/objects/Chatter_Group_Mirror__c.object
<CustomObject>
    <description>Object to add additional info to chatter groups (CollaborationGroups)</description>
    <fields>
        <fullName>Add_everyone_to_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Add everyone to the group the first time they log in to the community</description>
        <inlineHelpText>Add everyone to the group the first time they log in to the community</inlineHelpText>
        <label>Add everyone to group (deprec.)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Add_to_Group__c</fullName>
        <description>For any categories selected here, contacts matching those member categories will be automatically added to this group on their first visit to myIAVA.</description>
        <inlineHelpText>For any categories selected here, contacts matching those member categories will be automatically added to this group on their first visit to myIAVA.</inlineHelpText>
        <label>Auto-Add These Categories to Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Add_to_Selected_States__c</fullName>
        <description>For any categories selected here, contacts matching those member categories and whose state is selected in the &quot;Auto-Add States&quot; field will be automatically added to this group on their first visit to myIAVA.</description>
        <inlineHelpText>For any categories selected here, contacts matching those member categories and whose state is selected in the &quot;Auto-Add States&quot; field will be automatically added to this group on their first visit to myIAVA.</inlineHelpText>
        <label>Auto-Add Categories for Selected States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_add_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>People in this campaign will be added to this group during first login to COV</description>
        <inlineHelpText>People in this campaign will be added to this group during first login to COV</inlineHelpText>
        <label>Auto-add Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Chatter Group Mirrors</relationshipLabel>
        <relationshipName>Chatter_Group_Mirrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_add_States__c</fullName>
        <description>People with address in these states will be added to this group during first login to COV</description>
        <inlineHelpText>People with address in these states will be added to this group during first login to COV</inlineHelpText>
        <label>Auto-add States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expose_Joining_To__c</fullName>
        <description>If the group is unlisted, offer the ability to join this group to users whose contact&apos;s Member Category matches this field.</description>
        <inlineHelpText>If the group is unlisted, offer the ability to join this group to users whose contact&apos;s Member Category matches this field.</inlineHelpText>
        <label>Expose Joining To (for unlisted groups)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
                <value>
                    <fullName>Other Era</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>The group&apos;s Salesforce ID</description>
        <inlineHelpText>The group&apos;s Salesforce ID</inlineHelpText>
        <label>Group ID (filled in automatically)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Group__c</fullName>
        <formula>if( isblank(Group_ID__c ), null, HYPERLINK(&quot;https://my.iava.org/&quot; + Group_ID__c, &quot;View Group&quot;, &quot;_self&quot;))</formula>
        <label>Link to Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COV</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Chatter Group Mirror</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Add_everyone_to_group__c</columns>
        <columns>Auto_add_Campaign__c</columns>
        <columns>Auto_add_States__c</columns>
        <columns>Group_ID__c</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_auto_adds</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Expose_Joining_To__c</columns>
        <columns>Add_everyone_to_group__c</columns>
        <columns>Auto_Add_to_Group__c</columns>
        <columns>Auto_add_States__c</columns>
        <columns>Auto_Add_to_Selected_States__c</columns>
        <columns>Auto_add_Campaign__c</columns>
        <columns>Group_ID__c</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>[Event]</value>
        </filters>
        <filters>
            <field>Auto_Add_to_Group__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Auto_add_States__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Auto_Add_to_Selected_States__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Auto_add_Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Add_everyone_to_group__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All auto-adds</label>
    </listViews>
    <listViews>
        <fullName>All_non_events</fullName>
        <columns>NAME</columns>
        <columns>Expose_Joining_To__c</columns>
        <columns>Add_everyone_to_group__c</columns>
        <columns>Auto_Add_to_Group__c</columns>
        <columns>Auto_add_States__c</columns>
        <columns>Auto_Add_to_Selected_States__c</columns>
        <columns>Auto_add_Campaign__c</columns>
        <columns>Group_ID__c</columns>
        <columns>Network__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>[Event]</value>
        </filters>
        <label>All non-events</label>
    </listViews>
    <listViews>
        <fullName>Groups_not_Events</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Event</value>
        </filters>
        <label>Groups that are not Events</label>
    </listViews>
    <nameField>
        <label>Chatter Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Group Mirrors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>